--- a/gobotany/static/sass/styles.scss
+++ b/gobotany/static/sass/styles.scss
@@ -2709,7 +2709,35 @@ img.char-value-larger {
     font-size: 13px;
 }
 
-/* Smartphone-size screen styles */
+/* Tooltips for working area images and highlighted glossary terms. */
+
+.gb-tooltip {
+    background-color: #fff;
+    background: -webkit-linear-gradient(#ffffff, #f0f0c0);
+    background: -moz-linear-gradient(#ffffff, #f0f0c0);
+    background: -o-linear-gradient(#ffffff, #f0f0c0);
+    background: -ms-linear-gradient(#ffffff, #f0f0c0);
+    background: linear-gradient(#ffffff, #f0f0c0);
+    border: 1px solid #080;
+    padding: 0.5em 0.7em;
+    position: absolute;
+    width: 300px;
+    z-index: 500;
+
+    -moz-border-radius: 0.5em;
+    -webkit-border-radius: 0.5em;
+    -o-border-radius: 0.5em;
+    -ms-border-radius: 0.5em;
+    -khtml-border-radius: 0.5em;
+    border-radius: 0.5em;
+
+    -moz-box-shadow: 1px 1px 2px #333333;
+    -webkit-box-shadow: 1px 1px 2px #333333;
+    -o-box-shadow: 1px 1px 2px #333333;
+    box-shadow: 1px 1px 2px #333333;
+}
+
+/* Smartphone-size screen styles. These should be last. */
 
 @media only screen and (max-width: 400px) {
     body {
@@ -3037,33 +3065,14 @@ img.char-value-larger {
     #intro-overlay {
         font-size: 150%;
     }
+    #glossary #alphabet {
+        line-height: 250%;
+        width: auto;
+    }
+    .gb-tooltip {
+        width: 200px;
+    }
 }
-
-/* Tooltips for working area images and highlighted glossary terms. */
-
-.gb-tooltip {
-    background-color: #fff;
-    background: -webkit-linear-gradient(#ffffff, #f0f0c0);
-    background: -moz-linear-gradient(#ffffff, #f0f0c0);
-    background: -o-linear-gradient(#ffffff, #f0f0c0);
-    background: -ms-linear-gradient(#ffffff, #f0f0c0);
-    background: linear-gradient(#ffffff, #f0f0c0);
-    border: 1px solid #080;
-    max-width: 300px;
-    min-width: 50px;
-    padding: 0.5em 0.7em;
-    position: absolute;
-    z-index: 500;
-
-    -moz-border-radius: 0.5em;
-    -webkit-border-radius: 0.5em;
-    -o-border-radius: 0.5em;
-    -ms-border-radius: 0.5em;
-    -khtml-border-radius: 0.5em;
-    border-radius: 0.5em;
-
-    -moz-box-shadow: 1px 1px 2px #333333;
-    -webkit-box-shadow: 1px 1px 2px #333333;
-    -o-box-shadow: 1px 1px 2px #333333;
-    box-shadow: 1px 1px 2px #333333;
-}
+/* End of smartphone-size screen styles. Please do not add styles after
+ * these, otherwise they may not get overridden by the smartphone styles
+ * properly. Instead add any new styles before the smartphone styles. */
